# rustProjects

./: README.md
convert_temp/: Cargo.toml
convert_temp/src/: main.rs
derived_traits/: Cargo.toml
derived_traits/src/: main.rs
enums_with_ipaddr/: Cargo.toml
enums_with_ipaddr/src/: main.rs
function_ownership/: Cargo.toml
function_ownership/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
gui-test2/: Cargo.toml
gui_test/: Cargo.toml
gui_test/src/: main.rs
hello_world/: hello_world
hello_world/hello_cargo/: Cargo.toml
hello_world/hello_cargo/src/: main  main.rs
refrences/: Cargo.toml
refrences/src/: main.rs
string_slicing/: Cargo.toml
string_slicing/src/: main.rs
structs/: Cargo.toml
structs/src/: main.rs
structs2_electric_boog/: Cargo.toml
structs2_electric_boog/src/: main.rs
variable_cloning/: Cargo.toml
variable_cloning/src/: main.rs
variable_invalidation/: Cargo.toml
variable_invalidation/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
