[package]
name = "gui_test"
version = "0.1.0"
authors = ["Zakgeki <45861741+Zakgeki@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
